Bug 134761 - a rotated RAW image get saved straight with an inconsistent Exif orientation
Summary: a rotated RAW image get saved straight with an inconsistent Exif orientation
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Metadata-Raw (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-09-27 20:04 UTC by Hubert Figuiere
Modified: 2017-08-12 06:45 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.9.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Hubert Figuiere 2006-09-27 20:04:10 UTC
Version:           0.9-beta2 (using KDE KDE 3.5.4)
Installed from:    Ubuntu Packages

a rotated RAW image get saved "straight" with an inconsistent Exif orientation. That makes my image being rotated again (wrong).

digiKam should either save the image with the exact same orientation (RAW -> JPEG) or update the Orienation tag to be accurate (likely to be Top - Left)
Comment 1 caulier.gilles 2006-09-27 21:21:13 UTC
Hubert, 

There is an option to set Exif orientation to normal when you save an image from editor. Look in Metadata setup page.

Gilles
Comment 2 Marcel Wiesweg 2006-09-27 21:55:07 UTC
The default value of that setting is "false", while the default for rotate according to exif is "true"!
Isn't that a very confusing combination for new users?
If I am getting this right, it leads to the problem above.
Comment 3 Hubert Figuiere 2006-09-28 12:27:26 UTC
Why is there an option at all? It is like Exif rotation. Shouldn't even be an option. It is what Exif is for.
Comment 4 Hubert Figuiere 2006-09-28 12:31:45 UTC
setting the option works.

So the bug is "this should be the default behavior" added with a "remove that option" request.
Comment 5 Marcel Wiesweg 2006-10-03 15:43:44 UTC
SVN commit 591949 by mwiesweg:

Change default value.

I think this option was added a long time ago because of user request, so I dont remove it now.

BUG: 134761


 M  +1 -1      NEWS  
 M  +2 -2      digikam/albumsettings.cpp  


--- trunk/extragear/graphics/digikam/NEWS #591948:591949
@@ -298,6 +298,6 @@
 174 ==> 134841 : weird behaviour of identity setup.
 175 ==> 131382 : All thumbnails of album destroyed when using Tag Filters.
 176 ==> 134869 : High CPU usage while displaying ICC Profile.
-177 ==> 
+177 ==> 134761 : a rotated RAW image get saved straight with an inconsistent Exif orientation
 
 ----------------------------------------------------------------------------------------------------
--- trunk/extragear/graphics/digikam/digikam/albumsettings.cpp #591948:591949
@@ -190,7 +190,7 @@
     d->tooltipShowRating      = true;
 
     d->exifRotate             = true;
-    d->exifSetOrientation     = false;
+    d->exifSetOrientation     = true;
 
     d->saveIptcTags           = false;
     d->saveIptcRating         = false;
@@ -263,7 +263,7 @@
     config->setGroup("EXIF Settings");
 
     d->exifRotate = config->readBoolEntry("EXIF Rotate", true);
-    d->exifSetOrientation = config->readBoolEntry("EXIF Set Orientation", false);
+    d->exifSetOrientation = config->readBoolEntry("EXIF Set Orientation", true);
 
     // ---------------------------------------------------------------------