Change default value.

I think this option was added a long time ago because of user request, so I dont remove it now.

BUG: 134761

svn path=/trunk/extragear/graphics/digikam/; revision=591949